<resources>
    <string name="app_name">ToDoList</string>

    <string name="home_page">To Do List</string>
    <string name="search">Search</string>

    <string name="open">Open</string>
    <string name="close">Close</string>

    <string name="title">Title</string>
    <string name="content">Description</string>
    <string name="add">Add</string>
    <string name="add_item">Add Item</string>

    <string name="empty">Empty</string>
    <string name="no_item">You don\'t have any ToDos</string>

    <string name="date">Date</string>
    <string name="time">Time</string>

    <string name="format_date">%1$04d-%2$02d-%3$02d</string>
    <string name="format_date_usr">%1$02d %2$s, %3$d</string>
    <string name="format_time">%1$02d:%2$02d%3$s</string>

    <string name="alert_title">Overdue: %s</string>
    <string name="title_activity_consultation">ConsultationActivity</string>

    <string name="date_time">%1$s %2$s %3$s</string>

    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="date_transform_today">Today, %1$20d:%2$02d</string>
    <string name="date_transform_tomorrow">Tomorrow, %1$20d:%2$02d</string>
    <string name="date_transform_seconds">less than 1 minute</string>
    <string name="date_transform_minutes">%d minutes</string>
    <string name="date_transform_hours">%d hours</string>
    <string name="date_transform_days">%d days</string>

    <string name="error_search_at_leat_three_character">Research must contains 1 characters at least</string>

    <string name="search_by_title">Title</string>
    <string name="search_by_content">Content</string>
    <string name="search_by_status">Status</string>

    <string name="appbar_scrolling_view_behavior" translatable="false">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>

    <string name="Parameter">Parameter</string>
    <string name="filter">Filter</string>

    <string name="inProgress">In Progress</string>
    <string name="done">Done</string>
    <string name="expired">Overdue</string>
    <string name="datetime_separator">\@</string>
    <string name="remind_me">Remind Me</string>

    <string name="repeat_count">Repeat Count</string>

    <string-array name="unit_time">
        <item>Second(s)</item>
        <item>Minute(s)</item>
        <item>Hour(s)</item>
        <item>Day(s)</item>
    </string-array>

    <string name="interval">Interval</string>
    <string name="value">Value</string>
    <string name="repeat">Repeat</string>
    <string name="times">Time(s)</string>
    <string name="secondes">Seconde(s)</string>

    <string name="priority">Priority</string>
    <string name="priority_default">Default</string>
    <string name="priority_high">High</string>
    <string name="priority_max">Max</string>

    <string name="edit_save">Changes have been saved</string>
    <string name="delete">Delete</string>

    <string name="sorting">Sorting</string>
    <string name="status">Status</string>

    <string-array name="sorting_order">
        <item>Ascendant</item>
        <item>Descendant</item>
    </string-array>

    <string name="ok">OK</string>
    <string name="add_image">Add Image</string>
    <string name="get_photo">Capture photo</string>
    <string name="get_galerie">Galerie</string>
    <string name="error">Error</string>
    <string name="title_activity_image">ImageActivity</string>
</resources>
