<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:theme="@style/SearchTheme"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="16dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:text="@string/priority"
        android:textColor="@color/colorPrimary100"
        android:id="@+id/title"
        android:textSize="22sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <RadioGroup
        android:layout_marginTop="32dp"
        android:layout_gravity="center_vertical"
        android:id="@+id/radio_parent"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RadioButton
            android:id="@+id/radio_default"
            android:text="@string/priority_default"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <RadioButton
            android:id="@+id/radio_high"
            android:text="@string/priority_high"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <RadioButton
            android:id="@+id/radio_max"
            android:text="@string/priority_max"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </RadioGroup>

</LinearLayout>