<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/add_todo_item_root"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.AppBarLayout
        android:theme="@style/AppBarTheme"
        android:id="@+id/appBarLayout"
        android:background="@color/colorPrimary100"
        android:layout_width="match_parent"
        android:layout_height="200dp">

        <android.support.v7.widget.Toolbar
            android:id="@+id/main_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize">

            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:textSize="20sp" />

        </android.support.v7.widget.Toolbar>

        <LinearLayout
            android:orientation="vertical"
            android:layout_marginLeft="26dp"
            android:layout_marginRight="26dp"
            android:layout_marginBottom="32dp"
            android:gravity="bottom"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:text="@string/title"
                android:textColor="@android:color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <EditText
                android:textColor="@color/white100"
                android:textColorHint="@color/white100"
                android:textSize="20sp"
                android:id="@+id/add_item_title"
                android:hint="@string/title"
                android:inputType="text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:theme="@style/AppTheme"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:id="@+id/add_todo_item_activity"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="52dp"
        android:layout_marginLeft="26dp"
        android:layout_marginRight="26dp"
        android:layout_marginBottom="26dp">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/add_item_content"
                android:hint="@string/content"
                android:inputType="textMultiLine"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:weightSum="3"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:gravity="center"
                    android:id="@+id/add_item_date"
                    android:inputType="date"
                    android:hint="@string/date"
                    android:focusable="false"
                    android:clickable="true"
                    android:layout_width="0dp"
                    android:layout_weight="1.75"
                    android:layout_height="wrap_content" />

                <LinearLayout
                    android:layout_weight="1.25"
                    android:orientation="horizontal"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content">

                    <TextView
                        android:text="\@"
                        android:textColor="@color/colorPrimary100"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <EditText
                        android:gravity="center"
                        android:id="@+id/add_item_time"
                        android:inputType="time"
                        android:hint="@string/time"
                        android:focusable="false"
                        android:clickable="true"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/add_item"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:src="@mipmap/menu_icon_send"
        app:layout_anchor="@id/appBarLayout"
        app:layout_anchorGravity="bottom|right|end" />

</android.support.design.widget.CoordinatorLayout>